--- a/jspaint/styles.css
+++ b/jspaint/styles.css
@@ -53,7 +53,7 @@ body {
     display: flex;
 }
 
-.controls_colors .controls_color {
+.controls_colors .controls_color_btn {
     width: 50px;
     height: 50px;
     border-radius: 25px;
