--- a/jspaint/reset.css
+++ b/jspaint/reset.css
@@ -19,6 +19,7 @@ abbr,
 acronym,
 address,
 big,
+button,
 cite,
 code,
 del,
@@ -82,6 +83,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
+  outline: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
