--- a/jspaint/styles.css
+++ b/jspaint/styles.css
@@ -16,6 +16,7 @@ body {
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    cursor: none;
 }
 
 .controls {
@@ -66,4 +67,9 @@ body {
 
 .controls .controls_range {
     margin-bottom: 30px;
+}
+
+#cursor {
+    position: fixed;
+    pointer-events: none;
 }
