--- a/jspaint/styles.css
+++ b/jspaint/styles.css
@@ -10,6 +10,10 @@ body {
     padding-bottom: 50px;
 }
 
+#drawingTools {
+    display: flex;
+}
+
 .canvas {
     width: 700px;
     height: 700px;
@@ -50,8 +54,7 @@ body {
 .pallete > .color_btn {
     width: 50px;
     height: 50px;
-    margin-right: 5px;
-    margin-bottom: 10px;
+    margin: 0 0 10px 5px;
     border-radius: 50%;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
