--- a/jspaint/styles.css
+++ b/jspaint/styles.css
@@ -51,6 +51,15 @@ body {
     transform: scale(0.98);
 }
 
+.undoRedoBtns button{
+    background-color: white;
+    padding: 4px;
+    border-radius: 25px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    font-weight: 600;
+    font-size: 15px;
+}
+
 .pallete {
     display: flex;
     justify-content: center;
@@ -79,7 +88,7 @@ body {
     pointer-events: none;
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 768px) {
     #drawingTools {
         flex-direction: row;
     }
