--- a/jspaint/styles.css
+++ b/jspaint/styles.css
@@ -55,19 +55,16 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 3px;
 }
 
 .pallete > .color_btn {
     width: 50px;
     height: 50px;
-    margin: 0 0 10px 5px;
+    margin: 4px 2px;
     border-radius: 50%;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-}
-
-.pallete > .color_btn:first-child {
-    margin-left: 0;
 }
 
 .controls_range {
@@ -82,10 +79,12 @@ body {
 .rollbackBtns > button {
     background-color: white;
     padding: 4px;
-    border-radius: 25px;
+    border-radius: 50%;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     font-weight: 600;
     font-size: 15px;
+    width: 25px;
+    height: 25px;
     cursor: pointer;
 }
 
@@ -102,9 +101,13 @@ body {
     .pallete {
         flex-direction: column;
         justify-content: flex-start;
+        margin: 2px 4px;
     }
 
-    .pallete > .color_btn:first-child {
-        margin-left: 5px;
+}
+
+@media (prefers-color-scheme: dark) {
+    html {
+        background-color: #333333;
     }
 }
